--- https://github.com/vadonka/lge-kernel-kang/blob/93969b848dace43fc5fcad3280a0f5e617f443a3/mm/oom_kill.c
-- https://github.com/vadonka/lge-kernel-kang/commit/c2d75a4c5dd057fb5d28f92c733fee644e028d96
-- https://github.com/vadonka/lge-kernel-kang/commit/5e5e010ecedc83cd0397efda0d123e26cb6ca0a0
- remove useless dump_stack() from binder.c
- port some Linux 3.3, 3.4 changes
-- lib/cpumask.c: remove __any_online_cpu()
--- https://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=commitdiff;h=38b93780a5381961ad92d24ab9a12a964189a3a4
-- ARM: tlb: move noMMU tlb_flush() to asm/tlb.h
--- https://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=commitdiff;h=58e9c47fa0dd76693b2c85c010c7430a4de77c6d
-- ARM: btc: avoid invalidating the branch target cache on kernel TLB maintanence
--- https://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=commitdiff;h=4348810a241a330d3d143d62d7c988ec8b2e6629
-- ARM: Optimize multi-CPU tlb flushing a little more 
--- https://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=commitdiff;h=87067a935a174cf5e0b336d338a0ab535ffe199d
- merge changes from 21y
-- arch/arm/include/asm/io.h
-- drivers/serial/tegra_hsuart.c
-- drivers/video/tegra/nvmap.c
-- kernel/power/suspend.c
-- kernel/groups.c
- optimizing buildflags, adapting kernel config to build with gcc 4.7.1
-- keep compiling with 4.6.1, wireless.ko seems not working with 4.7.1

TODO:
- make kernel modules work with gcc 4.7.1
-- or build modules with 4.6.1 ?
- cherrypicking from vadonka
-- https://github.com/vadonka/lge-kernel-kang/commit/6f334518cf4f42f45dd243ac29c0d7d1ed0a3da0
-- https://github.com/vadonka/lge-kernel-kang/commit/d8800bb869ab7f0ca2df165d8e000cdaee2f3765
-- https://github.com/vadonka/lge-kernel-kang/commit/de29f457c300a4e327bdfab5c3ac6df5b7f679fa
-- https://github.com/vadonka/lge-kernel-kang/commit/88f6071333255e0f778616dbe8acb22d74636ea2
- update Fake_shmoo OC code
-- don't forget to analyze & merge spica OTF code